Fix dark mode background overlay to cover whole bg on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
   background-image: url("/gags_pattern.png");
   background-repeat: repeat;
   background-size: 15em;
+  background-color: var(--color-bg);
   font-family: sans-serif;
   height: 100%;
   width: 100%;
@@ -51,8 +52,8 @@ html[data-theme="dark"] body::before {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
   pointer-events: none; /* Ensure it doesn't block interaction */
   z-index: -1;
